# eqbool

./: .gitignore  .mypy.ini  CMakeLists.txt  README.md  basic.test  eqbool.cpp  eqbool.h  example.cpp  example.py  ifelse.test  inversion.test  main.cpp  or.test  pyproject.toml  setup.py  tester.cpp
eqbool/: __init__.py  _eqbool.cpp  _eqbool.pyi
tests/: CMakeLists.txt  and.test  eq.test  ifelse.test  not.test  or.test  sat.test  term.test
